tests/fail/list-index-assign-type.virtue
a = [123]
a[0] = "Hello?"

# error: type error
#  --> test.virtue:2:8
#    |
#  2 | a[0] = "Hello?"
#    |        ^^^^^^^^ expected i64, found string
#
